add arg to filter folders in data root dir which contain valid sound data

--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -1,3 +1,4 @@
 {
-  "data_dir": "/media/hugolucas/TOSHIBA EXT/emotion_data"
+  "data_dir": "/media/hugolucas/TOSHIBA EXT/emotion_data",
+  "folder_tag": "Actor_"
 }
