added new fields for data loading and batching

--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -1,4 +1,8 @@
 {
   "data_dir": "/media/hugolucas/TOSHIBA EXT/emotion_data",
-  "folder_tag": "Actor_"
+  "folder_tag": "Actor_",
+  "file_type": ".wav",
+  "audio_sample_rate": 1000,
+  "audio_max_length": 5,
+  "batch_size": 1
 }
