--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -8,11 +8,12 @@
   "audio_max_length": 3,
 
   "batch_size": 10,
-  "iterations": 20,
-  "epochs": 100,
+  "iterations": 30,
+  "log_interval": 10,
+  "epochs": 50,
   "learning_rate": 0.0005,
 
-  "lstm_layers": 3,
+  "lstm_layers": 5,
   "lstm_output_dim": 200,
   "dense_1_output_dim": 512,
   "dense_2_output_dim": 8,
