--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -9,6 +9,7 @@
 
   "batch_size": 10,
   "iterations": 31,
+  "test_iterations": 2,
   "log_interval": 10,
   "epochs": 50,
   "learning_rate": 0.0005,
