--- a/configs/config_1.json
+++ b/configs/config_1.json
@@ -1,9 +1,11 @@
 {
-  "data_dir": "/home/hugolucas/emotion_data",
-  "test_dir": "/home/hugolucas/emotion_data_test",
+  "raw_data_dir": "/home/hugolucas/emotion_dataset/Audio_Speech_Actors_01-24",
+  "data_dir": "/home/hugolucas/emotion_dataset/train",
+  "test_dir": "/home/hugolucas/emotion_dataset/test",
   "folder_tag": "Actor_",
   "file_type": ".wav",
   "emotion_index": 2,
+  "p_train": 0.90,
 
   "audio_max_length": 5,
 
